--- a/nginx-load-balancer.conf
+++ b/nginx-load-balancer.conf
@@ -45,72 +45,46 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-        # Rewrite rules for lex-web-ui loader files
+        # === CHATBOT ASSETS - HIGHEST PRIORITY ===
+        # Serve ALL chatbot assets directly from the mounted volume
+        location /chatbot-assets/ {
+            alias /usr/share/nginx/html/chatbot-assets/;
+            try_files $uri =404;
+            
+            # Add proper headers for all file types
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            add_header Cache-Control "public, max-age=3600" always;
+            
+            # Remove the X-Frame-Options for HTML files (chatbot needs to load in iframe)
+            location ~ \.html$ {
+                add_header X-Frame-Options "" always;
+            }
+        }
+
+        # Rewrite rules for files requested from root (legacy support)
         location = /lex-web-ui-loader.css {
-            rewrite ^ /chatbot-assets/lex-web-ui-loader.css last;
+            return 301 /chatbot-assets/lex-web-ui-loader.css;
         }
 
         location = /lex-web-ui-loader-config.json {
-            rewrite ^ /chatbot-assets/lex-web-ui-loader-config.json last;
+            return 301 /chatbot-assets/lex-web-ui-loader-config.json;
         }
         
-        # Catches the bad request for material_icons.css from the chatbot's internal loader
         location = /material_icons.css {
-            rewrite ^ /chatbot-assets/material_icons.css last;
+            return 301 /chatbot-assets/material_icons.css;
         }
 
-        # Catches other known chatbot dependencies requested from root
-        # Updated regex to catch .min.js and .min.css files
-        location ~ ^/(3\..+\.(js|css)|4\..+\.js|aws-sdk.+\.js|lex-web-ui.*\.(js|css)|wav-worker.+\.js)$ {
-            rewrite ^/(.+)$ /chatbot-assets/$1 last;
+        # Catch other known chatbot dependencies requested from root
+        location ~ ^/(3\..+\.(js|css)|4\..+\.js|aws-sdk.+\.js|lex-web-ui.*\.(js|css)|wav-worker.+\.js|chatbot-init-debug\.js)$ {
+            return 301 /chatbot-assets/$1;
         }
 
         location ~ ^/(lex-web-ui-.+\.(js|css|map))$ {
-            rewrite ^/(.+)$ /chatbot-assets/$1 last;
-        }
-
-        # Chatbot CSS files
-        location ~ ^/chatbot-assets/.*\.css$ {
-            try_files $uri =404;
-            add_header Content-Type "text/css" always;
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-            add_header Cache-Control "public, max-age=3600" always;
-        }
-
-        # Chatbot JS files
-        location ~ ^/chatbot-assets/.*\.js$ {
-            try_files $uri =404;
-            add_header Content-Type "application/javascript" always;
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-            add_header Cache-Control "public, max-age=3600" always;
-        }
-
-        # Chatbot HTML files
-        location ~ ^/chatbot-assets/.*\.html$ {
-            try_files $uri =404;
-            add_header Content-Type "text/html; charset=utf-8" always;
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-            add_header X-Frame-Options "" always;
-        }
-
-        # Chatbot JSON files
-        location ~ ^/chatbot-assets/.*\.json$ {
-            try_files $uri =404;
-            add_header Content-Type "application/json" always;
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-        }
-
-        # General chatbot assets (for any other files like images, fonts)
-        location /chatbot-assets/ {
-            try_files $uri =404;
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            return 301 /chatbot-assets/$1;
         }
         
+        # Main application proxy
         location / {
             proxy_pass http://takeout:80;
             proxy_set_header Host $host;
@@ -144,62 +118,39 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         
-        # Rewrite rules for lex-web-ui loader files
+        # === CHATBOT ASSETS - HIGHEST PRIORITY ===
+        location /chatbot-assets/ {
+            alias /usr/share/nginx/html/chatbot-assets/;
+            try_files $uri =404;
+            
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            add_header Cache-Control "public, max-age=3600" always;
+            
+            location ~ \.html$ {
+                add_header X-Frame-Options "" always;
+            }
+        }
+
+        # Rewrite rules for files requested from root
         location = /lex-web-ui-loader.css {
-            rewrite ^ /chatbot-assets/lex-web-ui-loader.css last;
+            return 301 /chatbot-assets/lex-web-ui-loader.css;
         }
 
         location = /lex-web-ui-loader-config.json {
-            rewrite ^ /chatbot-assets/lex-web-ui-loader-config.json last;
+            return 301 /chatbot-assets/lex-web-ui-loader-config.json;
         }
         
-        # Catches the bad request for material_icons.css from the chatbot's internal loader
         location = /material_icons.css {
-            rewrite ^ /chatbot-assets/material_icons.css last;
+            return 301 /chatbot-assets/material_icons.css;
         }
 
-        # Catches other known chatbot dependencies requested from root
-        # Updated regex to catch .min.js and .min.css files
-        location ~ ^/(3\..+\.(js|css)|4\..+\.js|aws-sdk.+\.js|lex-web-ui.*\.(js|css)|wav-worker.+\.js)$ {
-            rewrite ^/(.+)$ /chatbot-assets/$1 last;
+        location ~ ^/(3\..+\.(js|css)|4\..+\.js|aws-sdk.+\.js|lex-web-ui.*\.(js|css)|wav-worker.+\.js|chatbot-init-debug\.js)$ {
+            return 301 /chatbot-assets/$1;
         }
         
         location ~ ^/(lex-web-ui-.+\.(js|css|map))$ {
-            rewrite ^/(.+)$ /chatbot-assets/$1 last;
-        }
-
-        # Chatbot CSS files
-        location ~ ^/chatbot-assets/.*\.css$ {
-            try_files $uri =404;
-            add_header Content-Type "text/css" always;
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-            add_header Cache-Control "public, max-age=3600" always;
-        }
-
-        # Chatbot JS files
-        location ~ ^/chatbot-assets/.*\.js$ {
-            try_files $uri =404;
-            add_header Content-Type "application/javascript" always;
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-            add_header Cache-Control "public, max-age=3600" always;
-        }
-
-        # Chatbot HTML files
-        location ~ ^/chatbot-assets/.*\.html$ {
-            try_files $uri =404;
-            add_header Content-Type "text/html; charset=utf-8" always;
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-            add_header X-Frame-Options "" always;
-        }
-
-        # General chatbot assets (for any other files)
-        location /chatbot-assets/ {
-            try_files $uri =404;
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            return 301 /chatbot-assets/$1;
         }
 
         # --- Table routing ---
@@ -287,4 +238,3 @@ http {
         }
     }
 }
-
