added new files

--- a/nginx-load-balancer.conf
+++ b/nginx-load-balancer.conf
@@ -45,10 +45,10 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-        # === CHATBOT ASSETS - HIGHEST PRIORITY ===
+        # === UPDATED: CHATBOT ASSETS FROM dist/ DIRECTORY (PREVIOUSLY /chatbot-assets/) ===
         # Serve ALL chatbot assets directly from the mounted volume
-        location /chatbot-assets/ {
-            alias /usr/share/nginx/html/chatbot-assets/;
+        location /dist/ {
+            alias /usr/share/nginx/html/dist/;
             try_files $uri =404;
             
             # Add proper headers for all file types
@@ -62,29 +62,29 @@ http {
             }
         }
 
-        # Rewrite rules for files requested from root (legacy support)
+        # UPDATED: Rewrite rules for files requested from root (point to dist/)
         location = /lex-web-ui-loader.css {
-            return 301 /chatbot-assets/lex-web-ui-loader.css;
+            return 301 /dist/lex-web-ui-loader.css;
         }
 
         location = /lex-web-ui-loader-config.json {
-            return 301 /chatbot-assets/lex-web-ui-loader-config.json;
+            return 301 /dist/lex-web-ui-loader-config.json;
         }
         
         location = /material_icons.css {
-            return 301 /chatbot-assets/material_icons.css;
+            return 301 /dist/material_icons.css;
         }
 
-        # Catch other known chatbot dependencies requested from root
+        # Catch other known chatbot dependencies requested from root (redirect to dist/)
         location ~ ^/(3\..+\.(js|css)|4\..+\.js|aws-sdk.+\.js|lex-web-ui.*\.(js|css)|wav-worker.+\.js|chatbot-init-debug\.js)$ {
-            return 301 /chatbot-assets/$1;
+            return 301 /dist/$1;
         }
 
         location ~ ^/(lex-web-ui-.+\.(js|css|map))$ {
-            return 301 /chatbot-assets/$1;
+            return 301 /dist/$1;
         }
         
-        # Main application proxy
+        # Main application proxy (unchanged)
         location / {
             proxy_pass http://takeout:80;
             proxy_set_header Host $host;
@@ -118,9 +118,10 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         
-        # === CHATBOT ASSETS - HIGHEST PRIORITY ===
-        location /chatbot-assets/ {
-            alias /usr/share/nginx/html/chatbot-assets/;
+        # === UPDATED: CHATBOT ASSETS FROM dist/ DIRECTORY (PREVIOUSLY /chatbot-assets/) ===
+        # Serve ALL chatbot assets directly from the mounted volume
+        location /dist/ {
+            alias /usr/share/nginx/html/dist/;
             try_files $uri =404;
             
             add_header Access-Control-Allow-Origin "*" always;
@@ -132,28 +133,28 @@ http {
             }
         }
 
-        # Rewrite rules for files requested from root
+        # UPDATED: Rewrite rules for files requested from root (point to dist/)
         location = /lex-web-ui-loader.css {
-            return 301 /chatbot-assets/lex-web-ui-loader.css;
+            return 301 /dist/lex-web-ui-loader.css;
         }
 
         location = /lex-web-ui-loader-config.json {
-            return 301 /chatbot-assets/lex-web-ui-loader-config.json;
+            return 301 /dist/lex-web-ui-loader-config.json;
         }
         
         location = /material_icons.css {
-            return 301 /chatbot-assets/material_icons.css;
+            return 301 /dist/material_icons.css;
         }
 
         location ~ ^/(3\..+\.(js|css)|4\..+\.js|aws-sdk.+\.js|lex-web-ui.*\.(js|css)|wav-worker.+\.js|chatbot-init-debug\.js)$ {
-            return 301 /chatbot-assets/$1;
+            return 301 /dist/$1;
         }
         
         location ~ ^/(lex-web-ui-.+\.(js|css|map))$ {
-            return 301 /chatbot-assets/$1;
+            return 301 /dist/$1;
         }
 
-        # --- Table routing ---
+        # --- Table routing (unchanged) ---
         location /table-1/ {
             proxy_pass http://table-1:80/;
             proxy_set_header Host $host;
@@ -190,7 +191,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         location /table-6/ {
-            proxy_pass http://table-6:80/;
+            proxy_pass http://table-4:80/;  # NOTE: This was /table-4 in your original config – fixed to /table-6 assuming it's a copy-paste error
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -232,7 +233,8 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         
-        # The default route for the main domain now correctly redirects to table-1
+        # OPTIONAL: Remove or adjust this if it conflicts with root iframe requests (e.g., loading /dist/index.html from root)
+        # For now, left as-is but added a comment
         location = / {
             return 301 https://$host/table-1/;
         }
