--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,7 +105,7 @@ services:
       - ./nginx-load-balancer.conf:/etc/nginx/nginx.conf:ro
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-      - ./chatbot-assets:/usr/share/nginx/html/chatbot-assets:ro
+      - ./dist:/usr/share/nginx/html/dist:ro
     restart: unless-stopped
     networks:
       - restaurant-network
