--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -2,7 +2,6 @@
 
 name: Deploy TableTap-OrderProcessing Lambda
 
-# This workflow triggers on any push to the 'main' branch.
 on:
   push:
     branches:
@@ -11,48 +10,45 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
-    # These permissions are required for the OIDC integration to work.
+
     permissions:
       id-token: write
       contents: read
 
     steps:
-      # Step 1: Check out the repository code
+      # Step 1: Checkout code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: Set up Python environment
-      # Using a stable version supported by AWS Lambda
+      # Step 2: Set up Python
       - name: Set up Python 3.13
         uses: actions/setup-python@v4
         with:
           python-version: '3.13'
 
-      # Step 3: Install dependencies into a './dist' folder
-      # This reads your new requirements.txt file.
+      # Step 3: Install dependencies into ./package
       - name: Install dependencies
         run: |
-          pip install -r lambda-function/requirements.txt -t ./dist
+          mkdir -p package
+          pip install -r lambda-function/requirements.txt -t package/
 
-      # Step 4: Prepare deployment package by copying all source files
-      # This copies both your lambda_function.py and emailtemplate.html
-      - name: Prepare deployment package
+      # Step 4: Copy Lambda source files into ./package
+      - name: Copy source files
         run: |
-          cp lambda-function/* ./lambda/
+          cp lambda-function/*.py package/
+          cp lambda-function/*.html package/ || true
 
-      # Step 5: Configure AWS credentials using your GitHub Secret
+      # Step 5: Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_IAM_ROLE_FOR_OIDC_ARN }}
-          aws-region: ca-central-1 # Your AWS region
+          aws-region: ca-central-1
 
-      # Step 6: Deploy the OrderProcessor Lambda Function
-      # The 'dist' directory now contains your code, template, and dependencies.
+      # Step 6: Deploy Lambda
       - name: Deploy OrderProcessor Lambda
         uses: aws-actions/aws-lambda-deploy@v1
         with:
           function-name: TableTap-OrderProcessing
-          code-artifacts-dir: ./lambda/
+          code-artifacts-dir: ./package
           runtime: python3.13
