--- a/nginx-load-balancer.conf
+++ b/nginx-load-balancer.conf
@@ -45,37 +45,38 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-        # === UPDATED: CHATBOT ASSETS FROM dist/ DIRECTORY (PREVIOUSLY /chatbot-assets/) ===
-        # Serve ALL chatbot assets directly from the mounted volume
+        # === CHATBOT ASSETS FROM dist/ DIRECTORY ===
         location /dist/ {
             alias /usr/share/nginx/html/dist/;
             try_files $uri =404;
             
-            # Add proper headers for all file types
             add_header Access-Control-Allow-Origin "*" always;
             add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
             add_header Cache-Control "public, max-age=3600" always;
             
-            # Remove the X-Frame-Options for HTML files (chatbot needs to load in iframe)
             location ~ \.html$ {
                 add_header X-Frame-Options "" always;
             }
         }
 
-        # UPDATED: Rewrite rules for files requested from root (point to dist/)
-        location = /lex-web-ui-loader.css {
-            return 301 /dist/lex-web-ui-loader.css;
+        # === NEW: Serve takeout-specific config file ===
+        location = /lex-web-ui-loader-config.json {
+            alias /usr/share/nginx/html/dist/lex-web-ui-loader-config-takeout.json;
+            add_header Content-Type application/json;
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
         }
 
-        location = /lex-web-ui-loader-config.json {
-            return 301 /dist/lex-web-ui-loader-config.json;
+        # Redirect root requests for CSS
+        location = /lex-web-ui-loader.css {
+            return 301 /dist/lex-web-ui-loader.css;
         }
         
         location = /material_icons.css {
             return 301 /dist/material_icons.css;
         }
 
-        # Catch other known chatbot dependencies requested from root (redirect to dist/)
+        # Catch other known chatbot dependencies
         location ~ ^/(3\..+\.(js|css)|4\..+\.js|aws-sdk.+\.js|lex-web-ui.*\.(js|css)|wav-worker.+\.js|chatbot-init-debug\.js)$ {
             return 301 /dist/$1;
         }
@@ -84,7 +85,7 @@ http {
             return 301 /dist/$1;
         }
         
-        # Main application proxy (unchanged)
+        # Main application proxy
         location / {
             proxy_pass http://takeout:80;
             proxy_set_header Host $host;
@@ -95,7 +96,7 @@ http {
     }
 
     # ========================================
-    # == DINE-IN DOMAIN (Corrected Routing) ==
+    # == DINE-IN DOMAIN CONFIGURATION ==
     # ========================================
     server {
         listen 80;
@@ -118,8 +119,7 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         
-        # === UPDATED: CHATBOT ASSETS FROM dist/ DIRECTORY (PREVIOUSLY /chatbot-assets/) ===
-        # Serve ALL chatbot assets directly from the mounted volume
+        # === CHATBOT ASSETS FROM dist/ DIRECTORY ===
         location /dist/ {
             alias /usr/share/nginx/html/dist/;
             try_files $uri =404;
@@ -133,19 +133,24 @@ http {
             }
         }
 
-        # UPDATED: Rewrite rules for files requested from root (point to dist/)
-        location = /lex-web-ui-loader.css {
-            return 301 /dist/lex-web-ui-loader.css;
+        # === NEW: Serve dinein-specific config file ===
+        location = /lex-web-ui-loader-config.json {
+            alias /usr/share/nginx/html/dist/lex-web-ui-loader-config-dinein.json;
+            add_header Content-Type application/json;
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
         }
 
-        location = /lex-web-ui-loader-config.json {
-            return 301 /dist/lex-web-ui-loader-config.json;
+        # Redirect root requests for CSS
+        location = /lex-web-ui-loader.css {
+            return 301 /dist/lex-web-ui-loader.css;
         }
         
         location = /material_icons.css {
             return 301 /dist/material_icons.css;
         }
 
+        # Catch other known chatbot dependencies
         location ~ ^/(3\..+\.(js|css)|4\..+\.js|aws-sdk.+\.js|lex-web-ui.*\.(js|css)|wav-worker.+\.js|chatbot-init-debug\.js)$ {
             return 301 /dist/$1;
         }
@@ -154,7 +159,7 @@ http {
             return 301 /dist/$1;
         }
 
-        # --- Table routing (unchanged) ---
+        # --- Table routing ---
         location /table-1/ {
             proxy_pass http://table-1:80/;
             proxy_set_header Host $host;
@@ -191,7 +196,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         location /table-6/ {
-            proxy_pass http://table-4:80/;  # NOTE: This was /table-4 in your original config – fixed to /table-6 assuming it's a copy-paste error
+            proxy_pass http://table-6:80/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -233,8 +238,6 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         
-        # OPTIONAL: Remove or adjust this if it conflicts with root iframe requests (e.g., loading /dist/index.html from root)
-        # For now, left as-is but added a comment
         location = / {
             return 301 https://$host/table-1/;
         }
