--- a/nginx-load-balancer.conf
+++ b/nginx-load-balancer.conf
@@ -39,9 +39,10 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/take-out.momotarosushi.ca/privkey.pem;
         
 
-        add_header X-Frame-Options "SAMEORIGIN" always;
+        #add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header Content-Security-Policy "default-src 'self'; frame-src 'self' https://d2ibqiw1xziqq9.cloudfront.net; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://d2ibqiw1xziqq9.cloudfront.net; style-src 'self' 'unsafe-inline' https://d2ibqiw1xziqq9.cloudfront.net; img-src 'self' data: https://d2ibqiw1xziqq9.cloudfront.net; connect-src 'self' https://d2ibqiw1xziqq9.cloudfront.net https://cognito-idp.ca-central-1.amazonaws.com https://identitypool.cognito.ca-central-1.amazonaws.com;" always;
 
         
         # Main application proxy
@@ -73,9 +74,10 @@ http {
         
         
 
-        add_header X-Frame-Options "SAMEORIGIN" always;
+        #add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header Content-Security-Policy "default-src 'self'; frame-src 'self' https://d2ibqiw1xziqq9.cloudfront.net; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://d2ibqiw1xziqq9.cloudfront.net; style-src 'self' 'unsafe-inline' https://d2ibqiw1xziqq9.cloudfront.net; img-src 'self' data: https://d2ibqiw1xziqq9.cloudfront.net; connect-src 'self' https://d2ibqiw1xziqq9.cloudfront.net https://cognito-idp.ca-central-1.amazonaws.com https://identitypool.cognito.ca-central-1.amazonaws.com;" always;
 
         # --- Table routing ---
         location /table-1/ {
