--- a/nginx-load-balancer.conf
+++ b/nginx-load-balancer.conf
@@ -42,10 +42,7 @@ http {
         #add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-        add_header Content-Security-Policy "default-src 'self'; frame-src 'self' https://d2ibqiw1xziqq9.cloudfront.net; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://d2ibqiw1xziqq9.cloudfront.net; style-src 'self' 'unsafe-inline' https://d2ibqiw1xziqq9.cloudfront.net; img-src 'self' data: https://d2ibqiw1xziqq9.cloudfront.net; connect-src 'self' https://d2ibqiw1xziqq9.cloudfront.net https://cognito-idp.ca-central-1.amazonaws.com https://identitypool.cognito.ca-central-1.amazonaws.com;" always;
-
-        
-        # Main application proxy
+        add_header Content-Security-Policy "default-src 'self'; frame-src 'self' https://d2ibqiw1xziqq9.cloudfront.net https://js.stripe.com https://hooks.stripe.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://d2ibqiw1xziqq9.cloudfront.net https://js.stripe.com; style-src 'self' 'unsafe-inline' https://d2ibqiw1xziqq9.cloudfront.net; img-src 'self' data: https://d2ibqiw1xziqq9.cloudfront.net; connect-src 'self' https://d2ibqiw1xziqq9.cloudfront.net https://cognito-idp.ca-central-1.amazonaws.com https://identitypool.cognito.ca-central-1.amazonaws.com https://api.stripe.com;" always;
         location / {
             proxy_pass http://takeout:80;
             proxy_set_header Host $host;
@@ -77,8 +74,7 @@ http {
         #add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-        add_header Content-Security-Policy "default-src 'self'; frame-src 'self' https://d2ibqiw1xziqq9.cloudfront.net; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://d2ibqiw1xziqq9.cloudfront.net; style-src 'self' 'unsafe-inline' https://d2ibqiw1xziqq9.cloudfront.net; img-src 'self' data: https://d2ibqiw1xziqq9.cloudfront.net; connect-src 'self' https://d2ibqiw1xziqq9.cloudfront.net https://cognito-idp.ca-central-1.amazonaws.com https://identitypool.cognito.ca-central-1.amazonaws.com;" always;
-
+        add_header Content-Security-Policy "default-src 'self'; frame-src 'self' https://d2ibqiw1xziqq9.cloudfront.net https://js.stripe.com https://hooks.stripe.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://d2ibqiw1xziqq9.cloudfront.net https://js.stripe.com; style-src 'self' 'unsafe-inline' https://d2ibqiw1xziqq9.cloudfront.net; img-src 'self' data: https://d2ibqiw1xziqq9.cloudfront.net; connect-src 'self' https://d2ibqiw1xziqq9.cloudfront.net https://cognito-idp.ca-central-1.amazonaws.com https://identitypool.cognito.ca-central-1.amazonaws.com https://api.stripe.com;" always;
         # --- Table routing ---
         location /table-1/ {
             proxy_pass http://table-1:80/;
