added new branch

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -5,7 +5,7 @@ name: Build and Push Docker Images
 on:
   push:
     branches:
-      - feature/take-stripe-integration
+      - main
   workflow_dispatch:
 
 jobs:
